--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/tvTodoTitle"
         android:layout_width="wrap_content"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginVertical="44dp"
         android:text="@string/todo_title"
@@ -70,6 +70,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+
         android:id="@+id/fbAddTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
