--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -37,4 +37,11 @@
         android:layout_height="wrap_content"
         android:text="@string/SuperHeroList"
         app:layout_constraintTop_toBottomOf="@id/btnTODO" />
+
+    <Button
+        android:id="@+id/btnSettings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/settings"
+        app:layout_constraintTop_toBottomOf="@id/btnSuperHeroList" />
 </androidx.constraintlayout.widget.ConstraintLayout>
